<resources>

    <string name="app_name">DeferTrain</string>
    
    <string name="indexBtn1">注册新账户</string>
    <string name="indexBtn2">已有账户？这里登录</string>

    <string name="homeTitle">益智宝</string>
    <string name="homeBtn1">益智训练</string>
    <string name="homeBtn2">益智小贴士</string>
    <string name="homeBtn3">我关注的人</string>
    <string name="homeBtn4">个人中心</string>
    
    <string name="new_version">已有更新的版本！</string>
    <string name="updateBtn">现在更新</string>
    <string name="cancelBtn">以后再说</string>
    
    <string name="startBtn">点击这里开始</string>
    
    
    <string name="personalcenter">个人中心</string>
    <string name="attentionmy">关注我的人</string>
    <string name="integral">积分：</string>
    <string name="gift">礼物：</string>
    <string name="interaction">互动：</string>
    <string name="attentionone">我关注的人</string>
    <string name="attentiontwo">关注我的人</string>
    <string name="attentionapplyfor">关注人申请</string>
    <string name="mycollect">我的收藏</string>
    <string name="mycallingcard">我的名片</string>
     <string name="relation_we">联系我们</string>
    <string name="advertisement_cooperation">广告合作</string>
    <string name="interactionsay">互动交流</string>
    <string name="sweep">扫一扫二维码，关注我吧</string>
    <string name="additioninformation">附加信息</string>
    <string name="ID">账号</string>
    <string name="train_plan">允许查看我的训练计划</string>
    <string name="mental">允许查看我的脑力报告</string>
    <string name="cancel">拒绝</string>
    <string name="train">我要继续训练</string>
    <string name="agree">同意</string>
    <string name="market_cooperation">市场合作</string>
    <string name="emaill">邮箱地址</string>
    <string name="id_name">显示名称*</string>
    <string name="cell_phone_number">手机号</string>
    <string name="log_in_password">登录密码</string>
    <string name="sex">性别*</string>
    <string name="birth_date">出生年度*</string>
    <string name="city">所在城市*</string>
    <string name="log_out">退出登录</string>
    <string name="clean_room">清理空间</string>
    <string name="cancel_attention">取消关注</string>
    <string name="send">发送</string>
    <string name="content_cooperation">内容合作</string>
     <string name="relation_official_website">官网：</string>
     <string name="relation_Twitter">微博：</string>
     <string name="relation_Wechat">微信：</string>
    <string name="relation_phone">电话：</string>
    <string name="relation_email">邮箱：</string>
    <string name="market_phone">联系电话：</string>
    <string name="market_email">电子邮箱：</string>
    <string name="advertisement_phone">联系电话：</string>
    <string name="advertisement_email">电子邮箱：</string>
    <string name="content_phone">联系电话：</string>
    <string name="content_email">电子邮箱：</string>
     <string name="gift_box">我的礼物箱</string>
     <string name="gift_information">礼物信息</string>
     <string name="txt_treaty">使用协议与隐私条款</string>
     <string name="set_remark">请输入备注名</string>
     <string name="save">保存</string>
     <string name="attentionmy_detail">关注人明细</string>
     <string name="idea">发表反馈意见</string>
     <string name="idea_txt">请在此处输入你的反馈意见，我们会在参与反馈意见者抽出10名，并发与纪念奖</string>
     <string name="about">关于我们</string>
    
    <string-array name="homeMenu">
        <item>首页</item>
        <item>账户设置</item>
        <item>训练提醒</item>
        <item>清理 </item>
        <item>使用协议与隐私条款</item>
        <item>意见反馈</item>
        <item>关于</item>
    </string-array>
    
    <string name="readFileErr">读取二维码图片失败</string>
    <string name="QRScanTitle">扫一扫</string>
    
     <string name="guanzhuren">我关注的人</string>
    <string name="hudong">互动交流</string>
    <string name="xunlian">本周训练</string>
    <string name="jihua">计划完成</string>
    <string name="naoli">脑力情况</string>
    
    <string name="setremarkname">设置备注名</string>
    <string name="mingxi">关注人明细</string>
    
    <string name="saccount">账号</string>
    <string name="zuijinxunlian">最近训练</string>
    
     <string name="back">返回</string>
    <string name="remark">备注名：</string>
    
    <string name="addman">添加我关注的人</string>
    <string name="sweep">扫一扫</string>
    <string name="personal">个人资料</string>
    
     <string name="addfriend">加为好友</string>
     <string name="s">输入验证信息</string>
      <string name="s1">对方需要你填写验证信息</string>
      <string name="next">下一步</string>
      
       <string name="s2">添加关注人确认</string>
       <string name="f1">附加信息</string>
       
       <string name="plan">计划完成情况</string>
       <string name="weekplan">本周训练计划</string>
       <string name="brains">脑力情况</string>
        <string name="zhibiao">指标发展趋势</string>
        
        <string name="jianyi">训练建议</string>
    
</resources>
