<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:uview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
  
    <com.mycustom.view.TitleView
         android:layout_width="match_parent"  
         android:layout_height="50dp"
         android:id="@+id/mytitleview"
         uview:titleText="@string/homeTitle"
         uview:leftIcon="@drawable/ic_launcher"
         uview:rightIcon="@drawable/ic_launcher"
         uview:leftIconVisible="visible"
         uview:rightIconVisible="visible"
         uview:viewBgColor="@color/home_title" />
    
<TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="40dp"
    android:text="@string/relation_we"
    android:textSize="25dp"/>
<TableRow 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="11dp">
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/relation_official_website"
    android:textSize="15dp"/>
    <TextView 
    android:id="@+id/relation_official_website"
    android:layout_marginLeft="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:textSize="15dp"/>
    </TableRow>
    <TableRow 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="11dp">
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/relation_Twitter"
    android:textSize="15dp"/>
    <TextView 
     android:id="@+id/relation_Twitter"   
    android:layout_marginLeft="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:textSize="15dp"/>
    </TableRow>
     <TableRow 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="11dp">
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/relation_Wechat"
    android:textSize="15dp"/>
    <TextView
     android:id="@+id/relation_Wechat" 
    android:layout_marginLeft="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:textSize="15dp"/>
    </TableRow>
    
 <TableRow 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="11dp">
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/relation_phone"
    android:textSize="15dp"/>
    <TextView 
     android:id="@+id/relation_phone"
    android:layout_marginLeft="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:textSize="15dp"/>
</TableRow>
 <TableRow 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="11dp">
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/relation_email"
    android:textSize="15dp"/>
    <TextView
     android:id="@+id/relation_email"
    android:layout_marginLeft="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:textSize="15dp"/>
</TableRow>
<TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="20dp"
    android:text="@string/market_cooperation"
    android:textSize="25dp"/>
 <TableRow 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="11dp">
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/market_phone"
    android:textSize="15dp"/>
    <TextView 
     android:id="@+id/market_phone"
    android:layout_marginLeft="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:textSize="15dp"/>
</TableRow>
 <TableRow 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="11dp">
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/market_email"
    android:textSize="15dp"/>
    <TextView 
     android:id="@+id/market_email"
    android:layout_marginLeft="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:textSize="15dp"/>
</TableRow>
<TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="20dp"
    android:text="@string/advertisement_cooperation"
    android:textSize="25dp"/>
<TableRow 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="11dp">
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/advertisement_phone"
    android:textSize="15dp"/>
    <TextView 
     android:id="@+id/advertisement_phone"
    android:layout_marginLeft="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:textSize="15dp"/>
</TableRow>
 <TableRow 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="11dp">
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/advertisement_email"
    android:textSize="15dp"/>
    <TextView 
     android:id="@+id/advertisement_email"
    android:layout_marginLeft="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:textSize="15dp"/>
</TableRow>
<TextView 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="20dp"
    android:text="@string/content_cooperation"
    android:textSize="25dp"/>
<TableRow 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="11dp">
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/content_phone"
    android:textSize="15dp"/>
    <TextView
     android:id="@+id/content_phone" 
    android:layout_marginLeft="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:textSize="15dp"/>
</TableRow>
 <TableRow 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="11dp">
    <TextView 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/content_email"
    android:textSize="15dp"/>
    <TextView
    android:id="@+id/content_email"  
    android:layout_marginLeft="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text=""
    android:textSize="15dp"/>
    </TableRow>
</LinearLayout>