<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:uview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
     
    <com.mycustom.view.TitleView
         android:layout_width="match_parent"  
         android:layout_height="50dp"
         android:id="@+id/mytitleview"
         uview:titleText="@string/homeTitle"
         uview:titleTextSize="16sp"
         uview:titleTextColor="@android:color/white"
         uview:leftIcon="@drawable/ic_launcher"
         uview:rightIcon="@drawable/ic_launcher"
         uview:leftIconVisible="visible"
         uview:rightIconVisible="visible"
         uview:viewBgColor="@color/home_title" />
    
     <ImageView 
         android:id="@+id/top_img_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4"
         android:src="@drawable/ic_launcher"/>
     
     <TableLayout 
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:minHeight="220dp" 
         android:layout_marginLeft="13dp"
         android:layout_marginRight="13dp"
         android:layout_marginTop="10dp"
         android:stretchColumns="0,1"
         android:shrinkColumns="0,1" >
         
         <TableRow>
	         <Button 
	             android:id="@+id/trainBtn" 
	             android:text="@string/homeBtn1"
	             style="@style/HomeBtn1"
	             android:drawableTop="@drawable/ic_launcher" />
	         
	         <Button 
	             android:id="@+id/tipsBtn" 
	             android:layout_marginTop="2dp"
	             android:text="@string/homeBtn2"
	             style="@style/HomeBtn2"
	             android:drawableTop="@drawable/ic_launcher" />     
         </TableRow>
         <TableRow>
	         <Button 
	             android:id="@+id/friendBtn" 
	             android:text="@string/homeBtn3"
	             style="@style/HomeBtn2"
	             android:drawableTop="@drawable/ic_launcher" />
	         
	         <Button 
	             android:id="@+id/centerBtn" 
	             android:layout_marginTop="2dp"
	             android:text="@string/homeBtn4"
	             style="@style/HomeBtn1"
	             android:drawableTop="@drawable/ic_launcher" />          
         </TableRow>
     </TableLayout>
     
	<LinearLayout 
	     android:layout_width="match_parent"  
	     android:layout_height="0dp"
	     android:layout_weight="1"
	     android:visibility="invisible" >
         
    </LinearLayout>

</LinearLayout>

