<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:uview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical" xmlns:app="http://schemas.android.com/apk/res/com.neusoft.defertrain">

     <com.mycustom.view.TitleView
         android:layout_width="match_parent"  
         android:layout_height="50dp"
         android:id="@+id/mytitleview"
         uview:titleText="@string/s"
         uview:leftIcon="@drawable/restart"
         uview:leftIconVisible="visible"
         app:rightText="@string/next"
         app:rightTextVisible="visible"
         uview:viewBgColor="@color/home_title" />
    <TextView
        android:id="@+id/textView1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s1" />

    <EditText
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/biankuan"
        android:textSize="20dp"
        android:lines="4"
        android:ems="10" >

        <requestFocus />
    </EditText>

</LinearLayout>